// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#0a0a0a",
                "fontSize": 20,
                "fontWeight": "600",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                    "borderRadius": 18,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#0a0a0a",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "#71717a",
                    "fontSize": 12,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                    "borderRadius": 18,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#0a0a0a",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "#71717a",
                    "fontSize": 12,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                    "borderRadius": 18,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#0a0a0a",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "#71717a",
                    "fontSize": 12,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e4e4e7",
                    "borderRadius": 18,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#0a0a0a",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "#71717a",
                    "fontSize": 12,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`settings in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#5b3a1f",
                "fontSize": 22,
                "fontWeight": "700",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#5b3a1f",
                    "fontSize": 16,
                    "fontWeight": "700",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "#a47148",
                    "fontSize": 13,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#5b3a1f",
                    "fontSize": 16,
                    "fontWeight": "700",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "#a47148",
                    "fontSize": 13,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#5b3a1f",
                    "fontSize": 16,
                    "fontWeight": "700",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "#a47148",
                    "fontSize": 13,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#fde0c2",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#5b3a1f",
                    "fontSize": 16,
                    "fontWeight": "700",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "#a47148",
                    "fontSize": 13,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`settings in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#fafafa",
                "fontSize": 24,
                "fontWeight": "400",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderColor": "rgba(255,255,255,0.12)",
                    "borderRadius": 20,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#fafafa",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "rgba(250,250,250,0.7)",
                    "fontSize": 12,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderColor": "rgba(255,255,255,0.12)",
                    "borderRadius": 20,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#fafafa",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "rgba(250,250,250,0.7)",
                    "fontSize": 12,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderColor": "rgba(255,255,255,0.12)",
                    "borderRadius": 20,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#fafafa",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "rgba(250,250,250,0.7)",
                    "fontSize": 12,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderColor": "rgba(255,255,255,0.12)",
                    "borderRadius": 20,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#fafafa",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "rgba(250,250,250,0.7)",
                    "fontSize": 12,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`settings in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#1d1b20",
                "fontSize": 24,
                "fontWeight": "400",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 24,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#1d1b20",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "#65558f",
                    "fontSize": 12,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 24,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#1d1b20",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "#65558f",
                    "fontSize": 12,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 24,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#1d1b20",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "#65558f",
                    "fontSize": 12,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#e0e0e0",
                    "borderRadius": 24,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#1d1b20",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "#65558f",
                    "fontSize": 12,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
